# Data-Science

./: api.py  basic.py  main.py  pyproject.toml
02_Numpy_PANDA/: array.npz  main.py  pyproject.toml
02_Numpy_Pandas/: for_pandas.py  main.py  mynparray.npy
03_Titani_Dataset_Operation/: main.py  pyproject.toml
03_Titanic_Datasets/: main.py  pyproject.toml  titanicdataset.ows
04_Jupyter/: day1.ipynb  main.py  pyproject.toml
04_Jupyter_Notebook/: day4.ipynb  main.py  pyproject.toml
05_Outliers/: californiahousing.ows  main.ipynb  pyproject.toml
06_Scaling/: T_Test.ipynb  main.ipynb  pyproject.toml
07_Correlation/: main.ipynb  main.py  medical.ipynb  project.ipynb  pyproject.toml
08_Fastapi_Streamlit/: api.py  app.py  pyproject.toml
08_fastapi_steamlit/: api.py  app.py  pyproject.toml
09_Linear_Regression/: data.csv  irisandtitanic.ows  main.ipynb  pyproject.toml
09_Regression/: main.ipynb  pyproject.toml
10_MUltiple _PolynomialRegression/: linear_reg.ipynb  main.py  p_regres.ipynb  pyproject.toml
10_multiple_polynomial_Regression/: california.ipynb  main.ipynb  pyproject.toml
11_Classification/: main.ipynb  pyproject.toml
12_ConfusionMatrix_HeatMap/: main.ipynb  pyproject.toml
13_Unsupervised_Learning/: main.ipynb  pyproject.toml
14_RandC_using Neural/: classification_using_neural_network.ipynb  main.py  pyproject.toml  simple_linear_regresssion_using_neural_network.ipynb
15_AI/: hugging_face.ipynb  llm_api_call.ipynb  llm_api_call_with_image.ipynb  new.ipynb  pyproject.toml
