[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "02_Numpy_PANDA",
    "03_Titanic_Datasets",
    "04_Jupyter_Notebook",
    "05_Outliers",
    "06_Scaling",
    "07_Correlation",
]
