[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "requests>=2.32.5",
    "scipy>=1.17.1",
]

[tool.uv.workspace]
members = [
    "02_Numpy_Pandas",
    "03_Titani_Dataset_Operation",
    "04_Jupyter",
    "05_Outliers",
    "06_Scaling",
    "07_Correlation",
    "08_fastapi_steamlit",
    "09_Linear_Regression",
    "10_multiple_polynomial_Regression",
    "11_Classification",
    "12_ConfusionMatrix_HeatMap",
]
